tests/baselines/reference/everyTypeWithAnnotationAndInvalidInitializer.errors.txt
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(34,5): error TS2322: Type '"this is a string"' is not assignable to type '数字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(35,5): error TS2322: Type '9.9' is not assignable to type '文字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(36,5): error TS2322: Type '9.9' is not assignable to type 'Date'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(38,5): error TS2322: Type '9.9' is not assignable to type '无值'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(40,5): error TS2322: Type 'D<{}>' is not assignable to type 'I'.
  Property 'id' is missing in type 'D<{}>'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(41,5): error TS2322: Type 'D<{}>' is not assignable to type 'C'.
  Property 'id' is missing in type 'D<{}>'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(42,5): error TS2322: Type 'C' is not assignable to type 'D<文字>'.
  Property 'source' is missing in type 'C'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(43,5): error TS2322: Type '{ id: 文字; }' is not assignable to type 'I'.
  Types of property 'id' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(44,5): error TS2322: Type 'C' is not assignable to type '{ id: 文字; }'.
  Types of property 'id' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(46,5): error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 文字) => 数字'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(47,5): error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 文字) => 数字'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(48,5): error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(x: 文字) => 数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(50,5): error TS2322: Type '类为 N' is not assignable to type '类为 M'.
  Types of property 'A' are incompatible.
    Type '类为 N.A' is not assignable to type '类为 M.A'.
      Type 'N.A' is not assignable to type 'M.A'.
        Property 'name' is missing in type 'A'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(51,5): error TS2322: Type 'N.A' is not assignable to type 'M.A'.
tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts(52,5): error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 数字) => 文字'.
  Type '真假' is not assignable to type '文字'.


==== tests/cases/conformance/statements/VariableStatements/everyTypeWithAnnotationAndInvalidInitializer.ts (15 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    function F2(x: number): boolean { return x < 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    module N {
        export class A {
            id: number;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    var aNumber: number = 'this is a string';
        ~~~~~~~
!!! error TS2322: Type '"this is a string"' is not assignable to type '数字'.
    var aString: string = 9.9;
        ~~~~~~~
!!! error TS2322: Type '9.9' is not assignable to type '文字'.
    var aDate: Date = 9.9;
        ~~~~~
!!! error TS2322: Type '9.9' is not assignable to type 'Date'.
    
    var aVoid: void = 9.9;
        ~~~~~
!!! error TS2322: Type '9.9' is not assignable to type '无值'.
    
    var anInterface: I = new D();
        ~~~~~~~~~~~
!!! error TS2322: Type 'D<{}>' is not assignable to type 'I'.
!!! error TS2322:   Property 'id' is missing in type 'D<{}>'.
    var aClass: C = new D();
        ~~~~~~
!!! error TS2322: Type 'D<{}>' is not assignable to type 'C'.
!!! error TS2322:   Property 'id' is missing in type 'D<{}>'.
    var aGenericClass: D<string> = new C();
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'C' is not assignable to type 'D<文字>'.
!!! error TS2322:   Property 'source' is missing in type 'C'.
    var anObjectLiteral: I = { id: 'a string' };
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ id: 文字; }' is not assignable to type 'I'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    var anOtherObjectLiteral: { id: string } = new C();
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'C' is not assignable to type '{ id: 文字; }'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    
    var aFunction: typeof F = F2;
        ~~~~~~~~~
!!! error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 文字) => 数字'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    var anOtherFunction: (x: string) => number = F2;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 文字) => 数字'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    var aLambda: typeof F = (x) => 'a string';
        ~~~~~~~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(x: 文字) => 数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
    
    var aModule: typeof M = N;
        ~~~~~~~
!!! error TS2322: Type '类为 N' is not assignable to type '类为 M'.
!!! error TS2322:   Types of property 'A' are incompatible.
!!! error TS2322:     Type '类为 N.A' is not assignable to type '类为 M.A'.
!!! error TS2322:       Type 'N.A' is not assignable to type 'M.A'.
!!! error TS2322:         Property 'name' is missing in type 'A'.
    var aClassInModule: M.A = new N.A();
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'N.A' is not assignable to type 'M.A'.
    var aFunctionInModule: typeof M.F2 = F2;
        ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(x: 数字) => 真假' is not assignable to type '(x: 数字) => 文字'.
!!! error TS2322:   Type '真假' is not assignable to type '文字'.
    
    